# ozi/scripts/test/meson.build
# Part of the OZI Project, under the Apache License v2.0 with LLVM Exceptions.
# See LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
source_child_test_children = ['coverage', 'pytest']
foreach package : source_child_test_children
  subdir(package)
endforeach
